adding card group

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -44,6 +45,9 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+  <!-- The is for icons -->
+  <script src="https://unpkg.com/ionicons@4.6.3/dist/ionicons.js"></script>
 
 </body>
 </html>
