--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,18 +12,28 @@
 <ion-content [fullscreen]="true">
 
   <!-- We use loop for showing content of todoList -->
-  <ion-card   *ngFor="let item of todoList">
+  <ion-card   *ngFor="let item of todoList" class="ion-margin">
     <ion-card-header>
       <ion-card-title [style.color]="item.itemPriority === 'High' ? 'red' : (item.itemPriority === 'Middle' ? 'green' : 'orange') ">
         {{item.itemCategory}}
       </ion-card-title>
 
       <ion-item>
-        <ion-icon name="star"></ion-icon>
-        <ion-icon name="alarm-outline"></ion-icon>
+        <!-- <ion-icon size="small" class="fas fa-address-book"></ion-icon> -->
         <ion-label>{{item.itemName}}</ion-label>
       </ion-item>
     </ion-card-header>
+
+    <ion-card-content>
+      <!-- <ion-label>Fait {{item.itemDueDate | date:'fullDate'}}</ion-label> -->
+      <ion-label>Fait {{item.itemDueDate}}</ion-label>
+    </ion-card-content>
+
+    <ion-row>
+      <ion-item>
+        <ion-icon name="shared"></ion-icon>
+      </ion-item>
+    </ion-row>
   
   </ion-card>
  
